# muse

./: .gitignore  Dockerfile  README.md  docker-compose.yml  initScript.bash  install.bash  pyproject.toml  reinstall.bash  requirements.txt
.github/workflows/: publish_pypi.yml  python-tests.yml  python-tests.yml~
demonstrations/: README.md
docs/: MuSE.puml  README.md
example_data/multi/phones/: future.txt  history.txt  impact.txt
example_data/simplemulti/: debian.txt
experiments/: exp1_XLSum.bash  exp1_XLSumAll.bash
muse/: muse.py
muse/evaluation/classical/: blueMetric.py  meteorMetric.py  rougueMetric.py
muse/system/abstractive/: pytorchMuse.py
muse/system/driver/: driverMuse.py
muse/system/extractive/: gensimMuse.py  sumyMuse.py
muse/tests/: gensimMuse.py  gensimMuse.py~  sumyTest.py
src/muse/: __init__.py  __main__.py  muse.py
src/muse/data_fetcher/: __init__.py  dataFetcher.py  data_fetcher.py  resolver.py
src/muse/data_fetcher/file/: __init__.py  fileConnector.py  file_connector.py
src/muse/data_fetcher/folder/: __init__.py  folder_connector.py
src/muse/data_importer/: __init__.py  dataImporter.py  data_importer.py  fetcher.py  resolver.py
src/muse/data_importer/Columnar/: ColumnarConnector.py
src/muse/data_importer/columnar/: __init__.py  columnar_connector.py
src/muse/data_importer/folder/: __init__.py  folderConnector.py  folder_connector.py
src/muse/data_manager/: __init__.py
src/muse/datamanager/: __init__.py
src/muse/evaluation/: __init__.py  evaluation.py  resolver.py
src/muse/muse_system/: summarizer.py
src/muse/summarizer/: __init__.py  resolver.py  summarizer.py
src/muse/system/: __init__.py  summarizer.py  system.py
src/muse/utils/: __init__.py  data_fetcher.py  decorators.py  env.py  plugins.py  resourceErrors.py  resource_errors.py
testdata/complexexample/: complex.source  complex.target
testdata/multi/: phones_reference.txt
testdata/multi/phones/: challenges.txt  technology.txt
tests/: gensimMuse.py  sumyTest.py  test_sumy.py  utils.py
tests/test_data_connectors/test_file/: test.csv  test.parquet  test_columnar_files.py  test_csv.py  test_parquet.py
tests/test_data_connectors/test_folder/: test_conversations.py  test_folders.py  test_multi_document.py  test_single_document.py
tests/test_data_connectors/test_source_target/: test_source_target.py
tests/test_evaluations/test_classical_evaluation/: test_bertscore.py  test_bleu.py  test_meteor.py  test_ollama.py  test_rouge.py
tests/test_evaluations/test_llm_evaluation/: test_ollama.py
tests/test_integration_con_sum/: test_source_XLSum.py  test_source_XLSumMT5.py  test_source_targetSum.py
tests/test_integration_con_sum/doc/: complex.source  complex.target
tests/test_integration_con_sum/xlsum/: train.source  train.target
tests/test_summarizers/: test_conversation.py  test_falconsAI.py  test_mt5.py  test_spacy.py  test_sumy.py
tutorial/: DataFetcher.ipynb  Datasets.ipynb  Evaluation.ipynb  MuSE.ipynb  Plugins.ipynb  README.md  Summarizers.ipynb  flowExample.py  t.py
tutorial/data/: Datasets.ipynb
tutorial/dataset_importer/: Datasets.ipynb
tutorial/exampleFolder/: text.txt
tutorial/tutorial_datasets/: test_summary.txt
(+63 files in other folders)
