[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "MuSE"
version = "0.0.1"
authors = [
    { name="Héctor Menéndez", email="hector.menendez@kcl.ac.uk" },
    { name="Aidan Dakhama", email="aidan.dakhama@kcl.ac.uk" },
]
description = "MuSE: Multi-lingual Summarizer Evaluation Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"

dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/hdg7/muse"
Issues = "https://github.com/hdg7/muse/issues"

[project.scripts]
MuSE = "muse.muse:main"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/muse"]
