[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "MuSE"
authors = [
    { name="Héctor Menéndez", email="hector.menendez@kcl.ac.uk" },
    { name="Aidan Dakhama", email="aidan.dakhama@kcl.ac.uk" },
]
description = "MuSE: Multi-lingual Summarizer Evaluation Framework"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"

dynamic = [
    "dependencies",
    "version"
]

[project.urls]
Homepage = "https://github.com/hdg7/muse"
Issues = "https://github.com/hdg7/muse/issues"

[project.scripts]
muse = "muse.__main__:main"
muse_fetch = "muse.__main__:fetch"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "black",
    "isort",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
format = [
    "black .",
    "isort ."
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.hatch.version]
path = "src/muse/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/muse"]
